fix gradient width bug on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -1,32 +1,108 @@
 @import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600;900&display=swap");
-/* http://meyerweb.com/eric/tools/css/reset/ 
+/* http://meyerweb.com/eric/tools/css/reset/
    v2.0 | 20110126
    License: none (public domain)
 */
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
   margin: 0;
   padding: 0;
   border: 0;
-  font-size: 100%;
-  font: inherit;
+  font: 100% inherit;
   vertical-align: baseline;
 }
 
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
   display: block;
 }
 
@@ -34,16 +110,20 @@ body {
   line-height: 1;
 }
 
-ol, ul {
+ol,
+ul {
   list-style: none;
 }
 
-blockquote, q {
+blockquote,
+q {
   quotes: none;
 }
 
-blockquote:before, blockquote:after,
-q:before, q:after {
+blockquote::before,
+blockquote::after,
+q::before,
+q::after {
   content: "";
   content: none;
 }
@@ -8093,7 +8173,7 @@ table {
   --heading-font: "Source Sans Pro", sans-serif;
   --font-icons: "Font Awesome 6 Regular";
   --font-icons-brands: "Font Awesome 6 Brands";
-  --color-primary-500: #E8B533;
+  --color-primary-500: #e8b533;
   --color-secondary-500: #646464;
   --color-white: white;
   --color-black: black;
@@ -8197,7 +8277,7 @@ table {
   .ap-header__bar {
     height: 100%;
     display: block;
-    padding: 6.4rem 0 0 0;
+    padding: 6.4rem 0 0;
     position: absolute;
     z-index: 0;
     width: 8rem;
@@ -8264,7 +8344,7 @@ table {
     width: 30rem;
   }
   .ap-header:hover .ap-header__bar {
-    border-right: 1px solid #FFFFFF20;
+    border-right: 1px solid #ffffff20;
   }
   .ap-header:hover span {
     opacity: 1;
@@ -8276,7 +8356,7 @@ body.show-nav {
   overflow: hidden;
 }
 body.show-nav .ap-header__mobile {
-  background-color: #000000;
+  background-color: #000;
 }
 body.show-nav .ap-header__nav {
   transform: scale(1);
@@ -11917,13 +11997,16 @@ body.show-nav .ap-header__nav {
 }
 
 @media screen and (max-width: 1151px) {
-  .ap-fullscreen::before {
+  .ap-fullscreen:before {
     content: "";
     background: #00000073;
     position: absolute;
     bottom: 0;
     width: 100%;
     height: 100%;
+  }
+  .ap-fullscreen:after {
+    width: 100%;
   }
 
   .ap-heading {
