--- a/scss/fullscreen/fullscreen.scss
+++ b/scss/fullscreen/fullscreen.scss
@@ -33,13 +33,19 @@
 }
 
 @media screen and (max-width: $screen-lg) {
-  .ap-fullscreen::before {
-    content: "";
-    background: #00000073;
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 100%;
+  .ap-fullscreen {
+    &:before {
+      content: "";
+      background: #00000073;
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+      height: 100%;
+    }
+
+    &:after {
+      width: 100%;
+    }
   }
 
   .ap-heading {
